--- a/web/styles.css
+++ b/web/styles.css
@@ -14,3 +14,30 @@
 .highlight {
     background-color: rgb(255, 255, 0);
 }
+
+.callout {
+    margin-left: 5px;
+    max-width: 500px;
+}
+
+.callout-header {
+    padding: 5px 10px 10px 10px;
+    background: #ecf4fc;
+    font-weight: 600;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+
+.callout-body {
+    padding: 1px 10px 1px 10px;
+    background-color: rgba(236, 244, 252, 0.25);
+    color: black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
